--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:helloworld": "node dist/helloworld/server/server.mjs"
+    "serve:ssr:helloworld": "node dist/helloworld/server/server.mjs",
+    "build:clean": "rimraf dist && ng build"
   },
   "private": true,
   "dependencies": {
@@ -21,8 +22,14 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.3",
+    "@fortawesome/angular-fontawesome": "^0.14.1",
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "express": "^4.18.2",
+    "font-awesome": "^4.7.0",
     "rxjs": "~7.8.0",
+    "sass": "^1.72.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -39,6 +46,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "rimraf": "^5.0.5",
     "typescript": "~5.3.2"
   }
 }
